istio-1.23.2-intel/uday/uday-virtualservice-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uday-virtualservice-reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 75
        - destination:
            host: reviews
            subset: v2
          weight: 15
        - destination:
            host: reviews
            subset: v3
          weight: 10
