istio-1.23.2-intel/uday/uday-vs-timeouts-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-details
spec:
  hosts:
    - details
  http:
    - route:
        - destination:
            host: details
            subset: v1
      fault:
        delay:
          percentage:
            value: 50  # 50% de requisições sofrerão delay
          fixedDelay: 3s
